--- a/search.html
+++ b/search.html
@@ -105,7 +105,24 @@
       </div>
       <br>
       <section _ngcontent-qaq-c133="" id="container" class="Container">
-        <div _ngcontent-qaq-c133="" class="Query query-nav">
+        <div>
+          <!-- <button class="btn btn-sm" id="hide-query-btn"><svg aria-hidden="true" width="10" height="10" focusable="false"
+              data-prefix="fas" data-icon="chevron-left" class="svg-inline--fa fa-chevron-left fa-w-10" role="img"
+              xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+              <path fill="currentColor"
+                d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z">
+              </path>
+            </svg>
+            <svg aria-hidden="true" width="10" height="10" focusable="false" data-prefix="fas" data-icon="chevron-right"
+              class="svg-inline--fa fa-chevron-right fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 320 512">
+              <path fill="currentColor"
+                d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z">
+              </path>
+            </svg>
+          </button> -->
+        </div>
+        <div _ngcontent-qaq-c133="" class="Query query-nav" id="hide-query-div">
           <ngb-tabset _ngcontent-qaq-c133="" type="pills" class="tabset1" ng-reflect-type="pills">
             <ul role="tablist" class="nav nav-pills">
               <li class="nav-item">
@@ -123,7 +140,6 @@
                   aria-disabled="false"> Flagged
                 </a>
               </li>
-
             </ul>
             <div class="tab-content">
               <div role="tabpanel" class="active tab-pane" id="active-panel" aria-labelledby="active">
@@ -434,38 +450,49 @@
         </ngb-tabset>
         </div>
         <div _ngcontent-qaq-c133="" class="MiddleContainer">
+
           <!-- Search Input -->
           <div _ngcontent-qaq-c133="" class="Search">
+
             <app-search _ngcontent-qaq-c133="" _nghost-qaq-c127="">
               <br _ngcontent-qaq-c127="">
               <div _ngcontent-qaq-c127="" class="input-group">
+                <span class="" id="hide-query-btn">
+                  <svg aria-hidden="true" width="10" height="10" focusable="false" data-prefix="fas" data-icon="chevron-left"
+                    class="svg-inline--fa fa-chevron-left fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+                    <path fill="currentColor"
+                      d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z">
+                    </path>
+                  </svg>
+                  <svg aria-hidden="true" width="10" height="10" focusable="false" data-prefix="fas" data-icon="chevron-right"
+                    class="svg-inline--fa fa-chevron-right fa-w-10" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+                    <path fill="currentColor"
+                      d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z">
+                    </path>
+                  </svg>
+                  </span>
                 <input _ngcontent-qaq-c127="" type="search" placeholder="Search..." aria-label="query"
                   aria-describedby="button-addon" class="search-input form-control ng-untouched ng-pristine ng-valid"
                   ng-reflect-model="coronavirus">
                 <div _ngcontent-qaq-c127="" class="input-group-append searchButton">
-                  <span class="input-group-text"><svg aria-hidden="true" width="16" height="16" focusable="false"
-                      data-prefix="fas" data-icon="search" class="svg-inline--fa fa-search fa-w-16" role="img"
+                  <span class="input-group-text">
+                    <svg aria-hidden="true" width="16" height="16" focusable="false" data-prefix="fas"
+                      data-icon="search" class="svg-inline--fa fa-search fa-w-16" role="img"
                       xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                       <path fill="currentColor"
                         d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z">
                       </path>
                     </svg>
                   </span>
-
-                  <!-- <button _ngcontent-qaq-c127="" type="button" id="button-addon"
-                    class="p-btn btn btn-outline-secondary search-btn">
-                    <img src="./assets/images/search.png" alt="">
-                  </button> -->
-                  <!-- <div class="input-group-append">
-                    <span class="input-group-text red lighten-3" id="basic-text1"><i class="fas fa-search text-grey"
-                        aria-hidden="true"></i></span>
-                  </div> -->
                 </div>
-                <button class="btn btn-sm p-btn import-btn">Import</button>
+                <div>
+                  <button class="btn btn-sm import-btn">Import</button>
+                </div>
               </div>
-              <br _ngcontent-qaq-c127="">
+              <!-- <br _ngcontent-qaq-c127=""> -->
             </app-search>
           </div>
+          <!-- end of search container -->
           <div _ngcontent-qaq-c133="" class="Map">
             <div _ngcontent-qaq-c133="" class="Map2">
               <app-map _ngcontent-qaq-c133="" _nghost-qaq-c137="">
@@ -474,16 +501,9 @@
                 </div>
               </app-map>
             </div>
-            <!-- <div _ngcontent-qaq-c133="" class="ExtraButtons2">
-              <app-extra-buttons _ngcontent-qaq-c133="" _nghost-qaq-c130="">
-                <button _ngcontent-qaq-c130="" class="p-btn btn btn-sm">Import&nbsp;</button>
-                <button _ngcontent-qaq-c130="" class="p-btn btn-space btn btn-sm">&nbsp;&nbsp;Share&nbsp;</button>
-                <button _ngcontent-qaq-c130="" class="p-btn btn-space btn btn-sm">Archive</button>
-                <button _ngcontent-qaq-c130="" class="p-btn btn-space btn btn-sm">&nbsp;&nbsp;Trash&nbsp;</button>
-              </app-extra-buttons>
-            </div> -->
           </div>
           <div _ngcontent-qaq-c133="" class="Results">
+
             <app-results _ngcontent-qaq-c133="" _nghost-qaq-c128="">
               <!--container-->
               <div _ngcontent-qaq-c128="" class="row">
@@ -540,7 +560,7 @@
                                   <!-- <button _ngcontent-qaq-c128="" class="btn btn-sm">
                                     <img src="./assets/images/outline_text_snippet_black_36dp.png" alt="note pad">
                                   </button> -->
-                                  <button class="btn btn-sm note-btn">
+                                  <button class="btn btn-sm note-btn" id="show-note-panel">
                                     <svg aria-hidden="true" width="24" height="24" focusable="false" data-prefix="far"
                                       data-icon="sticky-note" class="svg-inline--fa fa-sticky-note fa-w-14" role="img"
                                       xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
@@ -1033,6 +1053,8 @@
 
                     </tbody>
                   </table>
+
+
                   <div _ngcontent-qaq-c128="">
                     <ngb-pagination _ngcontent-qaq-c128="" role="navigation" class="d-flex justify-content-center"
                       ng-reflect-collection-size="29" ng-reflect-page-size="10" ng-reflect-page="1">
@@ -1074,6 +1096,27 @@
             </app-results>
           </div>
         </div>
+
+        <!-- <div class="note-box"> -->
+          <div class="notes-side-panel row" id="hide-note-panel">
+            <!-- <aside> -->
+              <button class="btn btn-sm side-panel-btn" id="hide-note-btn">
+                <svg aria-hidden="true" width="16" height="16" focusable="false" data-prefix="far" data-icon="window-close"
+                class="svg-inline--fa fa-window-close fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                <path fill="currentColor"
+                  d="M464 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h416c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm0 394c0 3.3-2.7 6-6 6H54c-3.3 0-6-2.7-6-6V86c0-3.3 2.7-6 6-6h404c3.3 0 6 2.7 6 6v340zM356.5 194.6L295.1 256l61.4 61.4c4.6 4.6 4.6 12.1 0 16.8l-22.3 22.3c-4.6 4.6-12.1 4.6-16.8 0L256 295.1l-61.4 61.4c-4.6 4.6-12.1 4.6-16.8 0l-22.3-22.3c-4.6-4.6-4.6-12.1 0-16.8l61.4-61.4-61.4-61.4c-4.6-4.6-4.6-12.1 0-16.8l22.3-22.3c4.6-4.6 12.1-4.6 16.8 0l61.4 61.4 61.4-61.4c4.6-4.6 12.1-4.6 16.8 0l22.3 22.3c4.7 4.6 4.7 12.1 0 16.8z">
+                </path>
+              </svg>
+            </button>
+              <h5>Notes.....</h5>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat accusamus, esse asperiores debitis
+                tenetur temporibus iure reprehenderit quo cupiditate saepe. Illo accusamus ullam dolor reiciendis magni?
+                Necessitatibus expedita cupiditate laboriosam?</p>
+              
+            <!-- </aside> -->
+          </div>
+        <!-- </div> -->
+        </div>
       </section>
       <div _ngcontent-qaq-c133="" class="Bottom">
         <app-messages _ngcontent-qaq-c133="" _nghost-qaq-c114="">
@@ -1086,6 +1129,7 @@
                 class="text-xs-center">Copyright © 2020. <a _ngcontent-qaq-c136="" href="http://iterativesearch.com/"
                   target="_blank">IterativeSearch</a> All rights reserved.</span></p>
           </footer> -->
+
         </app-footer>
       </div>
     </app-search-page>
@@ -1094,7 +1138,44 @@
 
     </ng-http-loader>
   </app-root>
+  <script>
+    const btnHide = document.getElementById("hide-query-btn");
+    const queryHide = document.getElementById("hide-query-div");
+    const btnNoteHide = document.getElementById("hide-note-btn");
+    const noteHide = document.getElementById("hide-note-panel");
+    const btnNoteShow = document.getElementById("show-note-panel")
 
+    // hide/show query panel
+    btnHide.addEventListener("click", () => {
+      if (queryHide.style.display === "none") {
+        queryHide.style.display = "block"
+      }
+      else {
+        queryHide.style.display = "none";
+      }
+    })
+
+    // show notes panel when note button clicked
+    btnNoteShow.addEventListener("click", () => {
+      if (noteHide.style.display === "none") {
+        noteHide.style.display = "block"
+      }
+      else {
+        noteHide.style.display = "block"
+      }
+    })
+
+    // close notes panel
+    btnNoteHide.addEventListener("click", () => {
+      if (noteHide.style.display === "none") {
+        noteHide.style.display = "block"
+      }
+      else {
+        noteHide.style.display = "none";
+      }
+    })
+
+  </script>
 </body>
 
 </html>
