--- a/flagged.html
+++ b/flagged.html
@@ -47,18 +47,29 @@
         <app-header _ngcontent-qaq-c126="" _nghost-qaq-c135="">
           <nav _ngcontent-qaq-c135="" ngbnavbar="" class="navbar navbar-expand-md isearch-bg">
             <a _ngcontent-qaq-c135="" href="http://localhost:4200/#" class="navbar-brand">
-              <img _ngcontent-qaq-c135="" src="./GpAngular2flagged_files/IterativeSearch_LOGO_RGB.png" i=""
-                height="70px"></a>
+              <img _ngcontent-qaq-c135="" class="brand" src="./GpAngular2flagged_files/IterativeSearch_LOGO_RGB.png"
+                i="">
+            </a>
             <button _ngcontent-qaq-c135="" data-toggle="collapse" type="button" aria-controls="navbarContent"
               aria-label="Toggle navigation" class="navbar-toggler ml-auto custom-toggler" aria-expanded="false">
-              <span _ngcontent-qaq-c135="" class="navbar-toggler-icon"></span>
+              <span _ngcontent-qaq-c135="" class="navbar-toggler-icon">
+
+              </span>
             </button>
             <div _ngcontent-qaq-c135="" id="navbarContent" class="navbar-collapse justify-content-end collapse">
               <div _ngcontent-qaq-c135="" class="navbar-nav">
                 <div _ngcontent-qaq-c135="" class="nav-item dropdown">
-                  <div _ngcontent-qaq-c135="" ngbdropdown="" class="dropdown"><a _ngcontent-qaq-c135=""
-                      aria-haspopup="true" id="dropdownMenu1" ngbdropdowntoggle="" class="dropdown-toggle nav-link"
-                      aria-expanded="false">Settings</a>
+                  <div _ngcontent-qaq-c135="" ngbdropdown="" class="dropdown">
+                    <a _ngcontent-qaq-c135="" aria-haspopup="true" id="dropdownMenu1" ngbdropdowntoggle=""
+                      class="dropdown-toggle nav-link" aria-expanded="false"><svg aria-hidden="true" widht="26"
+                        height="26" focusable="false" data-prefix="fas" data-icon="cog"
+                        class="svg-inline--fa fa-cog fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 512 512">
+                        <path fill="currentColor"
+                          d="M487.4 315.7l-42.6-24.6c4.3-23.2 4.3-47 0-70.2l42.6-24.6c4.9-2.8 7.1-8.6 5.5-14-11.1-35.6-30-67.8-54.7-94.6-3.8-4.1-10-5.1-14.8-2.3L380.8 110c-17.9-15.4-38.5-27.3-60.8-35.1V25.8c0-5.6-3.9-10.5-9.4-11.7-36.7-8.2-74.3-7.8-109.2 0-5.5 1.2-9.4 6.1-9.4 11.7V75c-22.2 7.9-42.8 19.8-60.8 35.1L88.7 85.5c-4.9-2.8-11-1.9-14.8 2.3-24.7 26.7-43.6 58.9-54.7 94.6-1.7 5.4.6 11.2 5.5 14L67.3 221c-4.3 23.2-4.3 47 0 70.2l-42.6 24.6c-4.9 2.8-7.1 8.6-5.5 14 11.1 35.6 30 67.8 54.7 94.6 3.8 4.1 10 5.1 14.8 2.3l42.6-24.6c17.9 15.4 38.5 27.3 60.8 35.1v49.2c0 5.6 3.9 10.5 9.4 11.7 36.7 8.2 74.3 7.8 109.2 0 5.5-1.2 9.4-6.1 9.4-11.7v-49.2c22.2-7.9 42.8-19.8 60.8-35.1l42.6 24.6c4.9 2.8 11 1.9 14.8-2.3 24.7-26.7 43.6-58.9 54.7-94.6 1.5-5.5-.7-11.3-5.6-14.1zM256 336c-44.1 0-80-35.9-80-80s35.9-80 80-80 80 35.9 80 80-35.9 80-80 80z">
+                        </path>
+                      </svg>
+                    </a>
                     <div _ngcontent-qaq-c135="" ngbdropdownmenu="" aria-labelledby="dropdownMenu1"
                       class="dropdown-menu">
                       <button _ngcontent-qaq-c135="" class="dropdown-item">Settings</button>
@@ -71,7 +82,15 @@
               <div _ngcontent-qaq-c135="" class="nav-item dropdown">
                 <div _ngcontent-qaq-c135="" ngbdropdown="" class="dropdown">
                   <a _ngcontent-qaq-c135="" aria-haspopup="true" id="dropdownMenu2" ngbdropdowntoggle=""
-                    class="dropdown-toggle nav-link" aria-expanded="false"> Profile</a>
+                    class="dropdown-toggle nav-link" aria-expanded="false"> <svg aria-hidden="true" width="24"
+                      height="24" focusable="false" data-prefix="fas" data-icon="user-alt"
+                      class="svg-inline--fa fa-user-alt fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg"
+                      viewBox="0 0 512 512">
+                      <path fill="currentColor"
+                        d="M256 288c79.5 0 144-64.5 144-144S335.5 0 256 0 112 64.5 112 144s64.5 144 144 144zm128 32h-55.1c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16H128C57.3 320 0 377.3 0 448v16c0 26.5 21.5 48 48 48h416c26.5 0 48-21.5 48-48v-16c0-70.7-57.3-128-128-128z">
+                      </path>
+                    </svg>
+                  </a>
                   <div _ngcontent-qaq-c135="" ngbdropdownmenu="" aria-labelledby="dropdownMenu2" class="dropdown-menu">
                     <button _ngcontent-qaq-c135="" class="dropdown-item disabled">My Account</button>
                     <button _ngcontent-qaq-c135="" class="dropdown-item">Clear Data</button>
@@ -83,6 +102,7 @@
           </nav>
         </app-header>
       </div>
+      <br>
       <section _ngcontent-qaq-c126="" id="container" class="Container">
         <div _ngcontent-qaq-c126="" class="Query">
           <ngb-tabset _ngcontent-qaq-c126="" activeid="flagged" type="pills" class="tabset2"
