clean up result html

--- a/result.html
+++ b/result.html
@@ -1,55 +1,151 @@
 <!DOCTYPE html>
 <!-- saved from url=(0033)http://localhost:4200/result/1101 -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    
-    <title>GpAngular2</title>
-    <!--<base href="/">--><base href=".">
+<html lang="en">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-to-fit=yes">
-    <link rel=" icon" href="assets/images/iS_LOGO_CMYK-2-125x125.png" sizes="32x32">
-    <link rel="icon" href="assets/images/iS_LOGO_CMYK-2.png" sizes="192x192">
-    <link rel="apple-touch-icon-precomposed" href="assets/images/iS_LOGO_CMYK-2.png">
-    <meta name="msapplication-TileImage" content="assets/images/iS_LOGO_CMYK-2.png">
-    <!--
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+  <title>GpAngular2</title>
+  <!--<base href="/">-->
+  <base href=".">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-to-fit=yes">
+  <link rel=" icon" href="assets/images/iS_LOGO_CMYK-2-125x125.png" sizes="32x32">
+  <link rel="icon" href="assets/images/iS_LOGO_CMYK-2.png" sizes="192x192">
+  <link rel="apple-touch-icon-precomposed" href="assets/images/iS_LOGO_CMYK-2.png">
+  <meta name="msapplication-TileImage" content="assets/images/iS_LOGO_CMYK-2.png">
+  <!--
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
     -->
-    <!--
+  <!--
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'nonce-SuperRandom'; font-src https://themes.googleusercontent.com ">
     -->
-    <!-- https://stackoverflow.com/questions/18447970/content-security-policy-data-not-working-for-base64-images-in-chrome-28 -->
-    <meta http-equiv="Content-Security-Policy" content="default-src &#39;self&#39;; script-src &#39;self&#39; &#39;unsafe-inline&#39; &#39;unsafe-eval&#39;; font-src &#39;self&#39; data: fonts.googleapis.com; style-src &#39;self&#39; &#39;unsafe-inline&#39; data: fonts.googleapis.com; connect-src *; img-src &#39;self&#39; data:; frame-src *;">
+  <!-- https://stackoverflow.com/questions/18447970/content-security-policy-data-not-working-for-base64-images-in-chrome-28 -->
+  <meta http-equiv="Content-Security-Policy"
+    content="default-src &#39;self&#39;; script-src &#39;self&#39; &#39;unsafe-inline&#39; &#39;unsafe-eval&#39;; font-src &#39;self&#39; data: fonts.googleapis.com; style-src &#39;self&#39; &#39;unsafe-inline&#39; data: fonts.googleapis.com; connect-src *; img-src &#39;self&#39; data:; frame-src *;">
 
-    <!--
+  <!--
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; font-src 'self' data:; style-src 'self' 'unsafe-inline' data: ; connect-src *; img-src 'self' data:; frame-src *;">
     -->
 
-<!--
+  <!--
  * Bootstrap v4.4.1 (https://getbootstrap.com/)
  * Bootstrap Reboot v4.4.1 (https://getbootstrap.com/)
  * Bootstrap Grid v4.4.1 (https://getbootstrap.com/)
 -->
-    <link href="bootstrap.css" rel="stylesheet">
-    <link href="result.css" rel="stylesheet">
+  <link href="bootstrap.css" rel="stylesheet">
+  <link href="result.css" rel="stylesheet">
 
-	</head>
+</head>
 
 <body>
-    <app-root _nghost-qaq-c115="" ng-version="9.1.2"><router-outlet _ngcontent-qaq-c115=""></router-outlet><app-results-page _nghost-qaq-c122=""><div _ngcontent-qaq-c122="" class="Top"><app-header _ngcontent-qaq-c122="" _nghost-qaq-c135=""><nav _ngcontent-qaq-c135="" ngbnavbar="" class="navbar navbar-expand-md isearch-bg"><a _ngcontent-qaq-c135="" href="http://localhost:4200/#" class="navbar-brand"><img _ngcontent-qaq-c135="" src="./GpAngular2result_files/IterativeSearch_LOGO_RGB.png" i="" height="70px"></a><button _ngcontent-qaq-c135="" data-toggle="collapse" type="button" aria-controls="navbarContent" aria-label="Toggle navigation" class="navbar-toggler ml-auto custom-toggler" aria-expanded="false"><span _ngcontent-qaq-c135="" class="navbar-toggler-icon"></span></button><div _ngcontent-qaq-c135="" id="navbarContent" class="navbar-collapse justify-content-end collapse"><div _ngcontent-qaq-c135="" class="navbar-nav"><div _ngcontent-qaq-c135="" class="nav-item dropdown"><div _ngcontent-qaq-c135="" ngbdropdown="" class="dropdown"><a _ngcontent-qaq-c135="" aria-haspopup="true" id="dropdownMenu1" ngbdropdowntoggle="" class="dropdown-toggle nav-link" aria-expanded="false">Settings</a><div _ngcontent-qaq-c135="" ngbdropdownmenu="" aria-labelledby="dropdownMenu1" class="dropdown-menu"><button _ngcontent-qaq-c135="" class="dropdown-item">Settings</button><button _ngcontent-qaq-c135="" class="dropdown-item disabled">Feedback</button><button _ngcontent-qaq-c135="" class="dropdown-item">About</button></div></div></div></div><div _ngcontent-qaq-c135="" class="nav-item dropdown"><div _ngcontent-qaq-c135="" ngbdropdown="" class="dropdown"><a _ngcontent-qaq-c135="" aria-haspopup="true" id="dropdownMenu2" ngbdropdowntoggle="" class="dropdown-toggle nav-link" aria-expanded="false"> Profile</a><div _ngcontent-qaq-c135="" ngbdropdownmenu="" aria-labelledby="dropdownMenu2" class="dropdown-menu"><button _ngcontent-qaq-c135="" class="dropdown-item disabled">My Account</button><button _ngcontent-qaq-c135="" class="dropdown-item">Clear Data</button><button _ngcontent-qaq-c135="" class="dropdown-item disabled">Log Out</button></div></div></div></div></nav></app-header></div><section _ngcontent-qaq-c122="" id="container" class="Container"><div _ngcontent-qaq-c122="" class="Results"><app-single-result _ngcontent-qaq-c122=""><!--container--><div class="row"><div class="col"><table class="table table-hover"></table></div></div><div class="row"><div class="col"><button class="p-btn btn btn-sm">Back&nbsp;</button><a class="card-flag-icon ng-scope"><img aria-hidden="true" src="./GpAngular2result_files/blank.gif" class="icon-result-flagged ng-scope"><!--bindings={
-  "ng-reflect-ng-if": "true"
-}--><!--bindings={
-  "ng-reflect-ng-if": "false"
-}--></a><span class="align-center single-result-url">&nbsp;https://www.cars.com/&nbsp;&nbsp;</span><a target="_blank" class="p-btn btn btn-sm" href="https://www.cars.com/">Open this Page&nbsp;</a><!--container--><button placement="bottom" tooltipclass="note-tooltip" container="body" class="g-btn-active btn btn-sm btn-outline-secondary" ng-reflect-placement="bottom" ng-reflect-tooltip-class="note-tooltip" ng-reflect-container="body" ng-reflect-ngb-tooltip="[object Object]">Notes&nbsp;</button><!--container--><!--bindings={
-  "ng-reflect-ng-if": "new and used and new again"
-}--><!--bindings={
-  "ng-reflect-ng-if": "false"
-}--><!--container--><button placement="bottom" tooltipclass="next-tooltip" container="body" class="p-btn btn btn-sm next-button" ng-reflect-placement="bottom" ng-reflect-tooltip-class="next-tooltip" ng-reflect-container="body" ng-reflect-ngb-tooltip="[object Object]">Next&nbsp;</button><!--container--><!--container--><button placement="bottom" tooltipclass="next-tooltip" container="body" class="p-btn btn btn-sm prev-button" ng-reflect-placement="bottom" ng-reflect-tooltip-class="next-tooltip" ng-reflect-container="body" ng-reflect-ngb-tooltip="[object Object]" disabled="">Previous&nbsp;</button><!--container--><div id="iframe-container" class="iframe-container"><iframe src="./GpAngular2result_files/saved_resource.html" width="100%" scrolling="yes" marginheight="0" frameborder="0" id="iframeSR"></iframe></div></div></div></app-single-result></div></section><div _ngcontent-qaq-c122="" class="Bottom"><app-messages _ngcontent-qaq-c122="" _nghost-qaq-c114=""><!--bindings={
-  "ng-reflect-ng-if": "0"
-}--></app-messages><app-footer _ngcontent-qaq-c122="" _nghost-qaq-c136=""><footer _ngcontent-qaq-c136=""><p _ngcontent-qaq-c136=""><span _ngcontent-qaq-c136="" class="float-left">&nbsp;&nbsp;Version;&nbsp;0.9.8</span><span _ngcontent-qaq-c136="" class="text-xs-center">Copyright © 2020. <a _ngcontent-qaq-c136="" href="http://iterativesearch.com/" target="_blank">IterativeSearch</a> All rights reserved.</span></p></footer></app-footer></div></app-results-page><!--container--><ng-http-loader _ngcontent-qaq-c115="" spinner="sk-wave" _nghost-qaq-c49="" ng-reflect-spinner="sk-wave"><!--bindings={
-  "ng-reflect-ng-if": null
-}--></ng-http-loader></app-root>
-<!--
+  <app-root _nghost-qaq-c115="" ng-version="9.1.2">
+    <router-outlet _ngcontent-qaq-c115=""></router-outlet>
+    <app-results-page _nghost-qaq-c122="">
+      <div _ngcontent-qaq-c122="" class="Top">
+        <app-header _ngcontent-qaq-c122="" _nghost-qaq-c135="">
+          <nav _ngcontent-qaq-c135="" ngbnavbar="" class="navbar navbar-expand-md isearch-bg">
+            <a _ngcontent-qaq-c135="" href="http://localhost:4200/#" class="navbar-brand">
+              <img _ngcontent-qaq-c135="" src="./GpAngular2result_files/IterativeSearch_LOGO_RGB.png" i=""
+                height="70px">
+            </a>
+            <button _ngcontent-qaq-c135="" data-toggle="collapse" type="button" aria-controls="navbarContent"
+              aria-label="Toggle navigation" class="navbar-toggler ml-auto custom-toggler" aria-expanded="false">
+              <span _ngcontent-qaq-c135="" class="navbar-toggler-icon">
+              </span>
+            </button>
+            <div _ngcontent-qaq-c135="" id="navbarContent" class="navbar-collapse justify-content-end collapse">
+              <div _ngcontent-qaq-c135="" class="navbar-nav">
+                <div _ngcontent-qaq-c135="" class="nav-item dropdown">
+                  <div _ngcontent-qaq-c135="" ngbdropdown="" class="dropdown"><a _ngcontent-qaq-c135=""
+                      aria-haspopup="true" id="dropdownMenu1" ngbdropdowntoggle="" class="dropdown-toggle nav-link"
+                      aria-expanded="false">Settings</a>
+                    <div _ngcontent-qaq-c135="" ngbdropdownmenu="" aria-labelledby="dropdownMenu1"
+                      class="dropdown-menu">
+                      <button _ngcontent-qaq-c135="" class="dropdown-item">Settings</button>
+                      <button _ngcontent-qaq-c135="" class="dropdown-item disabled">Feedback</button>
+                      <button _ngcontent-qaq-c135="" class="dropdown-item">About</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div _ngcontent-qaq-c135="" class="nav-item dropdown">
+                <div _ngcontent-qaq-c135="" ngbdropdown="" class="dropdown">
+                  <a _ngcontent-qaq-c135="" aria-haspopup="true" id="dropdownMenu2" ngbdropdowntoggle=""
+                    class="dropdown-toggle nav-link" aria-expanded="false"> Profile</a>
+                  <div _ngcontent-qaq-c135="" ngbdropdownmenu="" aria-labelledby="dropdownMenu2" class="dropdown-menu">
+                    <button _ngcontent-qaq-c135="" class="dropdown-item disabled">My Account</button>
+                    <button _ngcontent-qaq-c135="" class="dropdown-item">Clear Data</button><button
+                      _ngcontent-qaq-c135="" class="dropdown-item disabled">Log Out</button></div>
+                </div>
+              </div>
+            </div>
+          </nav>
+        </app-header>
+      </div>
+      <section _ngcontent-qaq-c122="" id="container" class="Container">
+        <div _ngcontent-qaq-c122="" class="Results">
+          <app-single-result _ngcontent-qaq-c122="">
+
+            <div class="row">
+              <div class="col">
+                <table class="table table-hover"></table>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col"><button class="p-btn btn btn-sm">Back&nbsp;</button><a
+                  class="card-flag-icon ng-scope"><img aria-hidden="true" src="./GpAngular2result_files/blank.gif"
+                    class="icon-result-flagged ng-scope">
+                </a><span class="align-center single-result-url">&nbsp;https://www.cars.com/&nbsp;&nbsp;</span><a
+                  target="_blank" class="p-btn btn btn-sm" href="https://www.cars.com/">Open this Page&nbsp;</a>
+
+                <button placement="bottom" tooltipclass="note-tooltip" container="body"
+                  class="g-btn-active btn btn-sm btn-outline-secondary" ng-reflect-placement="bottom"
+                  ng-reflect-tooltip-class="note-tooltip" ng-reflect-container="body"
+                  ng-reflect-ngb-tooltip="[object Object]">Notes&nbsp;</button>
+                <button placement="bottom" tooltipclass="next-tooltip" container="body"
+                  class="p-btn btn btn-sm next-button" ng-reflect-placement="bottom"
+                  ng-reflect-tooltip-class="next-tooltip" ng-reflect-container="body"
+                  ng-reflect-ngb-tooltip="[object Object]">Next&nbsp;</button>
+                <button placement="bottom" tooltipclass="next-tooltip" container="body"
+                  class="p-btn btn btn-sm prev-button" ng-reflect-placement="bottom"
+                  ng-reflect-tooltip-class="next-tooltip" ng-reflect-container="body"
+                  ng-reflect-ngb-tooltip="[object Object]" disabled="">Previous&nbsp;</button>
+                <!--container-->
+                <div id="iframe-container" class="iframe-container">
+                  <iframe src="./GpAngular2result_files/saved_resource.html" width="100%" scrolling="yes"
+                    marginheight="0" frameborder="0" id="iframeSR">
+                  </iframe>
+                </div>
+              </div>
+            </div>
+          </app-single-result>
+        </div>
+      </section>
+      <div _ngcontent-qaq-c122="" class="Bottom">
+        <app-messages _ngcontent-qaq-c122="" _nghost-qaq-c114="">
+
+        </app-messages>
+        <app-footer _ngcontent-qaq-c122="" _nghost-qaq-c136="">
+          <!-- <footer _ngcontent-qaq-c136="">
+            <p _ngcontent-qaq-c136=""><span _ngcontent-qaq-c136=""
+                class="float-left">&nbsp;&nbsp;Version;&nbsp;0.9.8</span><span _ngcontent-qaq-c136=""
+                class="text-xs-center">Copyright © 2020. <a _ngcontent-qaq-c136="" href="http://iterativesearch.com/"
+                  target="_blank">IterativeSearch</a> All rights reserved.</span></p>
+          </footer> -->
+        </app-footer>
+      </div>
+    </app-results-page>
+
+    <ng-http-loader _ngcontent-qaq-c115="" spinner="sk-wave" _nghost-qaq-c49="" ng-reflect-spinner="sk-wave">
+
+    </ng-http-loader>
+  </app-root>
+  <!--
 <script src="./GpAngular2result_files/runtime.js.download" defer=""></script><script src="./GpAngular2result_files/polyfills-es5.js.download" nomodule="" defer=""></script><script src="./GpAngular2result_files/polyfills.js.download" defer=""></script><script src="./GpAngular2result_files/styles.js.download" defer=""></script><script src="./GpAngular2result_files/vendor.js.download" defer=""></script><script src="./GpAngular2result_files/main.js.download" defer=""></script>
 -->
 
-</body></html>
+</body>
+
+</html>
