result nav style update

--- a/flagged.html
+++ b/flagged.html
@@ -61,8 +61,8 @@
                 <div _ngcontent-qaq-c135="" class="nav-item dropdown">
                   <div _ngcontent-qaq-c135="" ngbdropdown="" class="dropdown">
                     <a _ngcontent-qaq-c135="" aria-haspopup="true" id="dropdownMenu1" ngbdropdowntoggle=""
-                      class="dropdown-toggle nav-link" aria-expanded="false"><svg aria-hidden="true" widht="26"
-                        height="26" focusable="false" data-prefix="fas" data-icon="cog"
+                      class="dropdown-toggle nav-link" aria-expanded="false">
+                      <svg aria-hidden="true" widht="26" height="26" focusable="false" data-prefix="fas" data-icon="cog"
                         class="svg-inline--fa fa-cog fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 512 512">
                         <path fill="currentColor"
