added content for search landing page - still needs styling

--- a/landing.html
+++ b/landing.html
@@ -7,6 +7,7 @@
   <title>Landing</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/02403185ac.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="landing.css">
 </head>
 
@@ -38,7 +39,7 @@
               <a class="dropdown-item" href="https://iterativesearch.com/" target="_blank">About</a>
             </div>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="dropDown2" role="button" data-toggle="dropdown" 
+            <a class="nav-link dropdown-toggle" href="#" id="dropDown2" role="button" data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">
               <svg aria-hidden="true" width="24" height="24" focusable="false" data-prefix="fas" data-icon="user-alt"
                 class="svg-inline--fa fa-user-alt fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg"
@@ -59,38 +60,29 @@
       </div>
     </nav>
   </div>
-  <!-- <nav class="navbar navbar-expand-md">
-    <a href="#">
-      <img class="brand" src="./GpAngular2search_files/IterativeSearch_LOGO_RGB.png" alt="">
-    </a>
-    <ul class="nav justify-content-end">
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-          aria-expanded="false">Dropdown</a>
-        <div class="dropdown-menu">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Separated link</a>
-        </div>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-          aria-expanded="false">Dropdown</a>
-        <div class="dropdown-menu">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Separated link</a>
-        </div>
-      </li>
-    </ul>
+  <div>
+    
+  </div>
+  <div class="search">
+    <input class="search-input" type="text" placeholder="Search....">
+    <button class="btn btn-sm search-btn">Search</button>
+  </div>
+  <div class="new-search">
+    <a href="">Recent Searches</a>
+  </div>
+  <div class="saved-search">
+    <a href="">Saved Searches</a>
+  </div>
+  <div class="search">
+    <button class="btn btn-sm search-btn">Spiders</button>
+    <button class="btn btn-sm search-btn">Moths</button>
+    <button class="btn btn-sm search-btn">Gross Bugs</button>
+    <button class="btn btn-sm search-btn">Ants</button>
+  </div>
+
+  <!-- <nav class="navbar fixed-bottom navbar justify-content-center">
+   collapse side example here
   </nav> -->
-
-
-
 
 
 
