--- a/landing.html
+++ b/landing.html
@@ -60,24 +60,41 @@
       </div>
     </nav>
   </div>
-  <div>
-    
+  <div class="isearch-logo">
+      <a class="navbar-brand" href="#"> <img class="logo" src="./GpAngular2search_files/IterativeSearch_LOGO_RGB.png" alt="">
+      </a>
   </div>
   <div class="search">
     <input class="search-input" type="text" placeholder="Search....">
-    <button class="btn btn-sm search-btn">Search</button>
+    <!-- <button class="btn btn-sm search-btn">Search</button> -->
   </div>
   <div class="new-search">
-    <a href="">Recent Searches</a>
+    <a href="">iterate a previous search</a>
   </div>
-  <div class="saved-search">
+  <!-- <div class="saved-search">
     <a href="">Saved Searches</a>
-  </div>
+  </div> -->
   <div class="search">
-    <button class="btn btn-sm search-btn">Spiders</button>
-    <button class="btn btn-sm search-btn">Moths</button>
-    <button class="btn btn-sm search-btn">Gross Bugs</button>
-    <button class="btn btn-sm search-btn">Ants</button>
+  <div class="card-deck">
+    <div class="card">
+      <img src="./GpAngular2search_files/IterativeSearch_LOGO_RGB.png" class="card-img-top" alt="...">
+      <div class="card-footer">
+        <h3 class="text-muted">Ants</h3>
+      </div>
+    </div>
+    <div class="card">
+      <img src="./GpAngular2search_files/IterativeSearch_LOGO_RGB.png" class="card-img-top" alt="...">
+      <div class="card-footer">
+        <h3 class="text-muted">Spiders</h3>
+      </div>
+    </div>
+    <div class="card">
+      <img src="./GpAngular2search_files/IterativeSearch_LOGO_RGB.png" class="card-img-top" alt="...">
+      <div class="card-footer">
+        <h3 class="text-muted">Moths</h3>
+      </div>
+    </div>
+  </div>
   </div>
 
   <!-- <nav class="navbar fixed-bottom navbar justify-content-center">
