--- a/landing.html
+++ b/landing.html
@@ -7,7 +7,7 @@
   <title>Landing</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/02403185ac.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/02403185ac.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="landing.css">
 </head>
 
@@ -61,8 +61,9 @@
     </nav>
   </div>
   <div class="isearch-logo">
-      <a class="navbar-brand" href="#"> <img class="logo" src="./GpAngular2search_files/IterativeSearch_LOGO_RGB.png" alt="">
-      </a>
+    <a class="navbar-brand" href="#"> <img class="logo" src="./GpAngular2search_files/IterativeSearch_LOGO_RGB.png"
+        alt="">
+    </a>
   </div>
   <div class="search">
     <input class="search-input" type="text" placeholder="Search....">
@@ -74,28 +75,33 @@
   <!-- <div class="saved-search">
     <a href="">Saved Searches</a>
   </div> -->
-  <div class="search">
-  <div class="card-deck">
-    <div class="card">
-      <img src="./GpAngular2search_files/IterativeSearch_LOGO_RGB.png" class="card-img-top" alt="...">
-      <div class="card-footer">
-        <h3 class="text-muted">Ants</h3>
+  <div class="row search">
+    <div class="col-sm-4">
+      <div class="card">
+        <img src="./GpAngular2search_files/IterativeSearch_LOGO_RGB.png" class="card-img-top" alt="...">
+        <div class="card-footer">
+          <h3 class="text-muted">Ants</h3>
+        </div>
       </div>
     </div>
-    <div class="card">
-      <img src="./GpAngular2search_files/IterativeSearch_LOGO_RGB.png" class="card-img-top" alt="...">
-      <div class="card-footer">
-        <h3 class="text-muted">Spiders</h3>
+    <div class="col-sm-4">
+      <div class="card">
+        <img src="./GpAngular2search_files/IterativeSearch_LOGO_RGB.png" class="card-img-top" alt="...">
+        <div class="card-footer">
+          <h3 class="text-muted">Spiders</h3>
+        </div>
       </div>
     </div>
-    <div class="card">
-      <img src="./GpAngular2search_files/IterativeSearch_LOGO_RGB.png" class="card-img-top" alt="...">
-      <div class="card-footer">
-        <h3 class="text-muted">Moths</h3>
+    <div class="col-sm-4">
+      <div class="card">
+        <img src="./GpAngular2search_files/IterativeSearch_LOGO_RGB.png" class="card-img-top" alt="...">
+        <div class="card-footer">
+          <h3 class="text-muted">Moths</h3>
+        </div>
       </div>
     </div>
   </div>
-  </div>
+
 
   <!-- <nav class="navbar fixed-bottom navbar justify-content-center">
    collapse side example here
