updated footer to landing nav style

--- a/search.html
+++ b/search.html
@@ -1113,12 +1113,15 @@
 
         </app-messages>
         <app-footer _ngcontent-qaq-c133="" _nghost-qaq-c136="">
-          <!-- <footer _ngcontent-qaq-c136="">
-            <p _ngcontent-qaq-c136=""><span _ngcontent-qaq-c136=""
-                class="float-left">&nbsp;&nbsp;Version;&nbsp;0.9.8</span><span _ngcontent-qaq-c136=""
-                class="text-xs-center">Copyright © 2020. <a _ngcontent-qaq-c136="" href="http://iterativesearch.com/"
-                  target="_blank">IterativeSearch</a> All rights reserved.</span></p>
-          </footer> -->
+          <div class=border-box-footer>
+            <footer _ngcontent-qaq-c136="">
+              <p _ngcontent-qaq-c136=""><span _ngcontent-qaq-c136=""
+                  class="float-left">&nbsp;&nbsp;Version;&nbsp;0.9.8</span><span _ngcontent-qaq-c136=""
+                  class="text-xs-center">Copyright © 2020. <a _ngcontent-qaq-c136="" href="http://iterativesearch.com/"
+                    target="_blank">IterativeSearch</a> All rights reserved.</span></p>
+            </footer>
+          </div>
+
 
         </app-footer>
       </div>
