--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<body>
 		<h2>Static iSearch Pages</h2>
 
+		<a href="landing.html">Landing.html</a>
+		<br/><br/>
 		<a href="search.html">Search.html</a>
 		<br/><br/>
 		<a href="flagged.html">Flagged.html</a>
